deployment/k8s/outdated/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
  labels:
    name: ingress-service
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/v1/auth
            backend:
              service:
                name: siakad-auth-api
                port:
                  number: 5001
          - pathType: ImplementationSpecific
            path: /api/v1/user
            backend:
              service:
                name: siakad-user-api
                port:
                  number: 5003
          - pathType: ImplementationSpecific
            path: /api/v1/payment
            backend:
              service:
                name: siakad-payment-api
                port:
                  number: 5004
          - pathType: ImplementationSpecific
            path: /api/v1/dashboard
            backend:
              service:
                name: siakad-dashboard-api
                port:
                  number: 5006
          - pathType: ImplementationSpecific
            path: /api/v1/announcement
            backend:
              service:
                name: siakad-announcement-api
                port:
                  number: 5007
          - pathType: ImplementationSpecific
            path: /api/v1/krs
            backend:
              service:
                name: siakad-krs-api
                port:
                  number: 5008
          - pathType: ImplementationSpecific
            path: /api/v1/data
            backend:
              service:
                name: siakad-data-api
                port:
                  number: 5009
          - pathType: ImplementationSpecific
            path: /api/v1/schedule
            backend:
              service:
                name: siakad-schedule-api
                port:
                  number: 5010
